--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -13,17 +13,39 @@
                     <div id="success"></div>
                     <form method="post">
                         {% csrf_token %}
+
+
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger">
+                                {% for error in form.non_field_errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+
+
                         <div class="control-group">
-                            {{ form.phone }}
+                            {{ form.email.label_tag }}
+                            {{ form.email }}
+                            {% for error in form.email.errors %}
+                                <p class="text-danger">{{ error }}</p>
+                            {% endfor %}
                         </div>
+
+
                         <div class="control-group">
+                            {{ form.password.label_tag }}
                             {{ form.password }}
+                            {% for error in form.password.errors %}
+                                <p class="text-danger">{{ error }}</p>
+                            {% endfor %}
                         </div>
+
                         <div>
-                            <button class="btn btn-primary py-2 px-4" type="submit" id="login">login
-                            </button>
+                            <button class="btn btn-primary py-2 px-4" type="submit" id="login">login</button>
                         </div>
                     </form>
+
                 </div>
             </div>
 
