--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -23,11 +23,9 @@
 
                 <div class="col-lg-7 h-auto mb-30">
                     <div class="h-100 bg-light p-30">
-                        <h3>Product Name Goes Here</h3>
-                        <h3 class="font-weight-semi-bold mb-4">$150.00</h3>
-                        <p class="mb-4">Volup erat ipsum diam elitr rebum et dolor. Est nonumy elitr erat diam stet sit
-                            clita ea. Sanc ipsum et, labore clita lorem magna duo dolor no sea
-                            Nonumy</p>
+                        <h3>{{ product.title }}</h3>
+                        <h3 class="font-weight-semi-bold mb-4">{{ product.price }}$</h3>
+                        <p class="mb-4">{{ product.description }}</p>
                         <div class="d-flex mb-3">
                             {% if product.size.all %}
                                 <strong class="text-dark mr-3">Sizes:</strong>
