--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -14,7 +14,6 @@
                     <form method="post">
                         {% csrf_token %}
 
-
                         {% if form.non_field_errors %}
                             <div class="alert alert-danger">
                                 {% for error in form.non_field_errors %}
@@ -23,18 +22,16 @@
                             </div>
                         {% endif %}
 
-
-                        <div class="control-group">
-                            {{ form.email.label_tag }}
+                        <div class="control-group mb-3">
+                            <label for="{{ form.email.id_for_label }}">ایمیل</label>
                             {{ form.email }}
                             {% for error in form.email.errors %}
                                 <p class="text-danger">{{ error }}</p>
                             {% endfor %}
                         </div>
 
-
-                        <div class="control-group">
-                            {{ form.password.label_tag }}
+                        <div class="control-group mb-3">
+                            <label for="{{ form.password.id_for_label }}">رمز عبور</label>
                             {{ form.password }}
                             {% for error in form.password.errors %}
                                 <p class="text-danger">{{ error }}</p>
@@ -45,6 +42,7 @@
                             <button class="btn btn-primary py-2 px-4" type="submit" id="login">login</button>
                         </div>
                     </form>
+
 
                 </div>
             </div>
