--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -13,23 +13,30 @@
                     <div id="success"></div>
                     <form method="post">
                         {% csrf_token %}
+
                         <div class="control-group">
-                            {{ form.email.errors }}
+                            <label for="{{ form.email.id_for_label }}">ایمیل</label>
                             {{ form.email }}
+                            {{ form.email.errors }}
                         </div>
+
                         <div class="control-group">
-                            {{ form.password1.errors }}
+                            <label for="{{ form.password1.id_for_label }}">رمز عبور</label>
                             {{ form.password1 }}
+                            {{ form.password1.errors }}
                         </div>
+
                         <div class="control-group">
-                            {{ form.password2.errors }}
+                            <label for="{{ form.password2.id_for_label }}">تکرار رمز عبور</label>
                             {{ form.password2 }}
+                            {{ form.password2.errors }}
                         </div>
+
                         <div>
-                            <button class="btn btn-primary py-2 px-4" type="submit" id="login">register
-                            </button>
+                            <button class="btn btn-primary py-2 px-4" type="submit" id="login"> register</button>
                         </div>
                     </form>
+
                 </div>
             </div>
 
