--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -38,16 +38,6 @@
                 </table>
             </div>
             <div class="col-lg-4">
-                <form class="mb-30" action="">
-                    <div class="input-group">
-                        <label>
-                            <input type="text" class="form-control border-0 p-4" placeholder="Discount code">
-                        </label>
-                        <div class="input-group-append">
-                            <button class="btn btn-primary">Apply</button>
-                        </div>
-                    </div>
-                </form>
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Cart Summary</span>
                 </h5>
                 <div class="bg-light p-30 mb-5">
@@ -62,12 +52,21 @@
                         </div>
                     </div>
                     <div class="pt-2">
+                        {% if user.is_authenticated %}
                         <div class="d-flex justify-content-between mt-2">
                             <h5>Total</h5>
                             <h5>{{ cart.total }}</h5>
                         </div>
                         <a  href="{% url "cart:order_create" %}" class="btn btn-block btn-primary font-weight-bold my-3 py-3">Proceed To Checkout
                         </a>
+                        {% else %}
+                        <div class="d-flex justify-content-between mt-2">
+                            <h5>Total</h5>
+                            <h5>{{ cart.total }}</h5>
+                        </div>
+                        <a  href="{% url "account:login" %}" class="btn btn-block btn-primary font-weight-bold my-3 py-3">Please login first
+                        </a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
