--- a/cart/templates/cart/order_detail.html
+++ b/cart/templates/cart/order_detail.html
@@ -18,7 +18,7 @@
                     </tr>
                     </thead>
                     <tbody class="align-middle">
-                    {% for item in ordr.items.all %}
+                    {% for item in order.items.all %}
                         <tr>
                             <td class="align-middle"><img style="width: 50px;" alt="" src={{ item.product.image.url }}>
                                 {{ item.product.title }}
@@ -39,10 +39,19 @@
                 <form class="mb-30" method="post" action="{% url 'cart:apply_discount' order.id %}">
                     {% csrf_token %}
                     <div class="input-group">
-                        <input type="text" name="discount_code" class="form-control border-0 p-4" placeholder="Coupon Code">
+                        <input type="text" name="discount_code" class="form-control border-0 p-4"
+                               placeholder="Coupon Code">
                         <div class="input-group-append">
                             <button class="btn btn-primary">Apply Coupon</button>
                         </div>
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li class="{{ message.tags }}">{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+
                     </div>
                 </form>
                 <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Cart Summary</span>
