--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -112,14 +112,15 @@
         </h2>
         <div class="row px-xl-5 pb-3">
             {% for category in categories %}
-                {% if not category.parent %}  {# فقط دسته‌بندی‌های اصلی #}
+                {% if not category.parent %}
                     <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                        <a class="text-decoration-none" href="">
+                        <a class="text-decoration-none" href="{% url 'products:products_list' %}?category={{ category.slug }}">
                             <div class="cat-item d-flex align-items-center mb-4">
                                 <div class="overflow-hidden" style="width: 100px; height: 100px;">
                                     {% if category.image %}
-                                        <img class="img-fluid" alt="{{ category.title }}"
-                                             src="{{ category.image.url }}">
+                                       <a href="{% url 'products:products_list' %}?category={{ category.slug }}">
+                                       <img class="img-fluid" alt="{{ category.title }}"   src="{{ category.image.url }}">
+                                       </a>
                                     {% else %}
                                         <img class="img-fluid" alt="{{ category.title }}"
                                              src="{% static 'img/default.jpg' %}">
@@ -145,263 +146,28 @@
         <div class="row px-xl-5">
             {% for product in products %}
                 <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <div class="product-item bg-light mb-4">
-                    <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" alt="" src='{{ product.image.url }}'>
-                        <div class="product-action">
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                    <div class="product-item bg-light mb-4">
+                        <a href="{% url 'products:detail' product.pk %}">
+                        <div class="product-img position-relative overflow-hidden">
+                            <img class="img-fluid w-100" alt="" src='{{ product.image.url }}'>
                         </div>
-                    </div>
-                    <div class="text-center py-4">
-                        <a class="h6 text-decoration-none text-truncate" href="">{{ product.title }}</a>
-                        <div class="d-flex align-items-center justify-content-center mt-2">
-                            <h5>{{ product.price }}$</h5>
-                            <h6 class="text-muted ml-2">
-                                <del>{{ product.price }}$</del>
-                            </h6>
+                        </a>
+                        <div class="text-center py-4">
+                            <a class="h6 text-decoration-none text-truncate"
+                               href="{% url 'products:detail' product.id %}">{{ product.title }}</a>
+                            <div class="d-flex align-items-center justify-content-center mt-2">
+                                <h5>{{ product.price }}$</h5>
+                                <h6 class="text-muted ml-2">
+                                    <del>{{ product.price }}$</del>
+                                </h6>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             {% endfor %}
 
         </div>
     </div>
     <!-- Products End -->
 
-
-{#    <!-- Offer Start -->#}
-{#    <div class="container-fluid pt-5 pb-3">#}
-{#        <div class="row px-xl-5">#}
-{#            <div class="col-md-6">#}
-{#                <div class="product-offer mb-30" style="height: 300px;">#}
-{#                    <img class="img-fluid" alt="" src={% static "img/offer-1.jpg" %}>#}
-{#                    <div class="offer-text">#}
-{#                        <h6 class="text-white text-uppercase">Save 20%</h6>#}
-{#                        <h3 class="text-white mb-3">Special Offer</h3>#}
-{#                        <a href="" class="btn btn-primary">Shop Now</a>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-md-6">#}
-{#                <div class="product-offer mb-30" style="height: 300px;">#}
-{#                    <img class="img-fluid" alt="" src={% static "img/offer-2.jpg" %}>#}
-{#                    <div class="offer-text">#}
-{#                        <h6 class="text-white text-uppercase">Save 20%</h6>#}
-{#                        <h3 class="text-white mb-3">Special Offer</h3>#}
-{#                        <a href="" class="btn btn-primary">Shop Now</a>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#    <!-- Offer End -->#}
-
-
-    {#    <!-- Products Start -->#}
-    {#    <div class="container-fluid pt-5 pb-3">#}
-    {#        <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Recent Products</span></h2>#}
-    {#        <div class="row px-xl-5">#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-1.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-2.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-3.jpg" %}>#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-4.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                       #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-5.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                       #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-6.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-7.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#            <div class="col-lg-3 col-md-4 col-sm-6 pb-1">#}
-    {#                <div class="product-item bg-light mb-4">#}
-    {#                    <div class="product-img position-relative overflow-hidden">#}
-    {#                        <img class="img-fluid w-100" alt="" src={% static "img/product-8.jpg" %} >#}
-    {#                        <div class="product-action">#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>#}
-    {#                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>#}
-    {#                        </div>#}
-    {#                    </div>#}
-    {#                    <div class="text-center py-4">#}
-    {#                        <a class="h6 text-decoration-none text-truncate" href="">Product Name Goes Here</a>#}
-    {#                        <div class="d-flex align-items-center justify-content-center mt-2">#}
-    {#                            <h5>$123.00</h5><h6 class="text-muted ml-2"><del>$123.00</del></h6>#}
-    {#                        </div>#}
-    {#                        #}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </div>#}
-    {#    <!-- Products End -->#}
-
-
-{#    <!-- Vendor Start -->#}
-{#    <div class="container-fluid py-5">#}
-{#        <div class="row px-xl-5">#}
-{#            <div class="col">#}
-{#                <div class="owl-carousel vendor-carousel">#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-1.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-2.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-3.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-4.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-5.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-6.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-7.jpg" %}>#}
-{#                    </div>#}
-{#                    <div class="bg-light p-4">#}
-{#                        <img alt="" src={% static "img/vendor-8.jpg" %}>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#    <!-- Vendor End -->#}
 {% endblock %}
