--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -7,6 +7,27 @@
             <!-- Shop Sidebar Start -->
             <div class="col-lg-3 col-md-4">
                 <form method="get">
+
+                    <!-- Category Start -->
+                    <h5 class="section-title position-relative text-uppercase mb-3">
+                        <span class="bg-secondary pr-3">Filter by category</span>
+                    </h5>
+                    <div class="bg-light p-4 mb-30">
+                        {% for category in categories %}
+                            <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
+                                <input type="checkbox" name="category" value="{{ category.slug }}"
+                                       class="custom-control-input" id="category-{{ category.id }}"
+                                       {% if category.slug in selected_categories %}checked{% endif %}>
+                                <label class="custom-control-label" for="category-{{ category.id }}">
+                                    {{ category.title }}
+                                </label>
+                                <span class="badge border font-weight-normal"></span>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <!-- Category End -->
+
+
                     <!-- Price Start -->
                     <h5 class="section-title position-relative text-uppercase mb-3">
                         <span class="bg-secondary pr-3">Filter by price</span>
@@ -97,25 +118,22 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
                             <div class="product-item bg-light mb-4">
                                 <div class="product-img position-relative overflow-hidden">
-                                    <img class="img-fluid w-100" src={{ product.image.url }} alt="">
-                                    <div class="product-action">
-                                        <a class="btn btn-outline-dark btn-square" href=""><i
-                                                class="fa fa-shopping-cart"></i></a>
-                                        <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
-                                        <a class="btn btn-outline-dark btn-square" href=""><i
-                                                class="fa fa-sync-alt"></i></a>
-                                        <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
-                                    </div>
+                                    <a href="{% url 'products:detail' product.pk %}">
+                                        <img class="img-fluid w-100" alt="{{ product.title }}"
+                                             src="{{ product.image.url }}">
+                                    </a>
                                 </div>
                                 <div class="text-center py-4">
-                                    <a class="h6 text-decoration-none text-truncate" href="">{{ product.title }}</a>
+                                    <a class="h6 text-decoration-none text-truncate"
+                                       href="{% url 'products:detail' product.pk %}">
+                                        {{ product.title }}
+                                    </a>
                                     <div class="d-flex align-items-center justify-content-center mt-2">
                                         <h5>${{ product.price }}</h5>
                                         <h6 class="text-muted ml-2">
                                             <del>${{ product.price }}</del>
                                         </h6>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
