--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -23,9 +23,9 @@
                         {% endif %}
 
                         <div class="control-group mb-3">
-                            <label for="{{ form.email.id_for_label }}">ایمیل</label>
-                            {{ form.email }}
-                            {% for error in form.email.errors %}
+                            <label for="{{ form.username.id_for_label }}">ایمیل</label>
+                            {{ form.username }}
+                            {% for error in form.username.errors %}
                                 <p class="text-danger">{{ error }}</p>
                             {% endfor %}
                         </div>
